Edited wiki page Deployment through web user interface.

--- a/wiki/Deployment.wiki
+++ b/wiki/Deployment.wiki
@@ -128,6 +128,65 @@ sudo chmod g+rws /var/log/condor-copasi
 
 
 =Configure Condor-Copasi=
-With the Web Frontend and Background Daemon configured, Condor Copasi must now be configured. The configuration file {{{settings.py}}} is located in the {{{web_frontend}}} directory (in the example configuration above, this is located in {{{/var/www/condor-copasi}}}).
-  * If necessary, change the database engine, name, username and password. Host and port can be left blank if the database is running on the local server.
-  * 
+With the Web Frontend and Background Daemon installed and set up, Condor Copasi must now be configured. The configuration file {{{settings.py}}} is located in the {{{web_frontend}}} directory (in the example configuration above, this is located in {{{/var/www/condor-copasi}}}).
+  * Set the database engine, database name, username and password. Host and port can be left blank if the database is running on the local server.
+  * Change the secret key to a random string
+  * Set SITE_SUBFOLDER to the folder at which the web server is serving the web frontend, e.g. {{{'/condor-copasi/'}}} if the web frontend is being served at {{{www.example.com/condor-copasi}}}. If serving at the root folder, set to {{{'/'}}}
+  * Set USER_FILES_DIR to the absolute path of the directory created earlier to store user-uploaded and automatically generated files. Remember, this must be readable and writeable by the web server and the background daemon.
+  * Set LOG_FILE to the absolute path of the log file we wish to write to. Remember, the background daemon must be able to write to the parent folder.
+  * If necessary, change the logging level (options are logging.DEBUG to record all debugging messages and logging.ERROR to just record error messages).
+  * Set COPASI_BINARY_DIR to the absolute path of the directory containing the CopasiSE binaries for all operating systems. The binaries should be named as follows:
+    {{{
+CopasiSE.LINUX.INTEL
+CopasiSE.LINUX.X86_64
+CopasiSE.OSX.INTEL
+CopasiSE.OSX.PPC
+CopasiSE.WINDOWS.INTEL
+CopasiSE.WINNT51.INTEL
+    }}}
+  * Set COPASI_LOCAL_BINARY to the absolute path of the CopasiSE binary that is can be executed on the local machine. This must be executable by hte web server and background daemon
+  * If necessary, change COMPLETED_JOB_DAYS, MIN_CONDOR_Q_POOL_TIME and IDEAL_JOB_TIME according to the descriptions given in settings.py
+
+{{{settings.py}}} contains other, Django-specific settings that should not need to be changed.
+
+==Populate the database==
+Assuming everything has been configured correctly, we can now create the required database tables, and populate them accordingly. This is done using {{{manage.py}}} in the {{{web_frontend}}} directory. Firstly though, the PYTHONPATH and DJANGO_SETTINGS_MODULE environmental variables must be set.
+
+===Setting the Python path===
+Both the {{{web_frontend}}} folder, and it's parent folder must be added to the python path. For example, if web_frontend is located in /var/www/condor-copasi:
+{{{
+export PYTHONPATH=$PYTHONPATH:/var/www/condor-copasi:/var/www/condor-copasi/web_frontend
+export DJANGO_SETTINGS_MODULE=web_frontend.settings
+}}}
+===Run manage.py===
+With the PYTHONPATH and DJANGO_SETTINGS_MODULE variables set, execute the following command in the web_frontend directory:
+{{{
+python manage.py syncdb
+}}}
+This should prompt you to create an initial username and password, and will create the appropriate database tables.
+
+At this point, if required, CREATE_TABLE and DROP_TABLE privileges for the condor copasi database user can be dropped.
+
+=Start the background daemon=
+With everything set up, we can now start the background daemon.
+
+Ensure that the Python path is correctly set, containing the following folders:
+  * web_frontend 
+  * The web_frontend parent folder
+  * The folder containing the background daemon
+
+Also, the DJANGO_SETTINGS_MODULE environmental variable must be set to web_frontend.settings
+
+For example:
+{{{
+export PYTHONPATH=$PYTHONPATH:/var/www/condor-copasi:/var/www/condor-copasi/web_frontend:/TODO-path/to/bg/daemon
+export DJANGO_SETTINGS_MODULE=web_frontend.settings
+}}}
+And start the daemon:
+{{{
+/path/to/daemon.py start
+}}}
+The daemon can then be stopped:
+{{{
+/path/to/daemon.py stop
+}}}
