--- a/wiki/Deployment.wiki
+++ b/wiki/Deployment.wiki
@@ -5,7 +5,7 @@ The Condor Copasi Web Frontend is written in Python as a [http://docs.djangoproj
 ==Python setup==
 Python 2.6 must be installed and configured.
 
-===LXML===
+====LXML====
 The [http://lxml.de/tutorial.html LXML] package must be installed, and added to the python path.
 
 ==Django setup==
