--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -1,1 +1,33 @@
-Information on using the various tasks
+#labels Phase-Support,Featured
+#sidebar TableOfContents
+
+
+=Introduction=
+Condor-Copasi is a web-based interface for integrating [http://www.copasi.org Copasi] with the [http://www.cs.wisc.edu/condor/ Condor] High Throughput Computing (HTC) environment. It provides Copasi users with a simple environment for utilising the power of High Throughput Computing, without requiring any technical knowledge of Condor of other HTC tools.
+
+
+=Usage=
+Condor-Copasi is able to perform a number of predefined tasks. Each task requires that the user set up a model using Copasi, and upload the Copasi model file to the web server.
+
+<wiki:toc max_depth="2" />
+
+
+==Global Sensitivity Analysis==
+Condor-Copasi is able to automate and parallelize the global sensitivity analysis procedure, as described in the paper [http://www.ncbi.nlm.nih.gov/pubmed/18632455 A new strategy for assessing sensitivities in biochemical models].
+
+==Stochastic Simulation==
+Condor-Copasi provides an easy to use environment for running multiple stochastic simulations. The simulations are automatically split into parallel jobs and run on the Condor pool. Once completed, the results are automatically collated, and particle number means and standard deviations calculated. Plots of this processed data can be obtained through the web interface.
+
+==Parallel Scan==
+Condor-Copasi will take a Parameter Scan set up in Copasi and automatically split it into smaller chunks. In cases where multiple scan tasks/repeats are nested, only the the top-level scan will be split. The smaller chunks are then submitted to the Condor pool, and the results collated as if the scan task had been run on a single machine.
+
+==Optimization Repeat==
+This feature runs the optimization task a set number of times, splitting into multiple parallel jobs where necessary. The best value from the multiple number of runs is extracted, though the results of every optimization run are available for download too if necessary.
+
+
+==Parameter Estimation Repeat==
+Similar to the optimization repeat task above, this feature runs the parameter estimation task multiple times, splitting into parallel jobs where necessary. The best set of parameters values are then selected, though the results of each parameter estimation run are available to download if necessary.
+
+
+==Optimization Repeat with Different Alogorithms==
+This feature runs the optimization task using different algorithms. Each algorithm runs a separate parallel job. Condor-Copasi will automatically determine which algorithm(s) found the best result.
