Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,2 +1,2 @@
-[Usage Usage]
-  [Usage#Introduction Introduction]
+=  * [Instructions Instruction Manual]=
+    * ==[Usage#Introduction Introduction]==
