Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,2 +1,2 @@
-=  * [Instructions Instruction Manual]=
-    * ==[Usage#Introduction Introduction]==
+==  * [Manual Condor-Copasi]==
+    * ==[Manual#Introduction Introduction]==
